syntax = "proto3";

option csharp_namespace = "GrpcSample2";

package greet;

// The greeting service definition.
service ServerGreeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}
service ServerGreeter2 {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string lastName = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  int32 count = 2;
  int32 countR = 3;
}
